[package]
name = "tnetennba_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "tnetennba_native"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rustler = "0.29.1"
itertools = "0.11.0"
chrono = "0.4.26"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench_valid_guess"
harness = false